@@ -31,7 +31,6 @@ glade/recipe_index.glade
 glade/shopCatEditor.glade
 glade/timerDialog.glade
 glade/valueEditor.glade
-gourmet-0.15.5/gourmet.desktop.in
 gourmet.1
 gourmet.desktop.in
 i18n/POTFILES.in
